@@ -1,4 +1,4 @@
-#!/bin/bash
+#!usr/bin/env bash
 
 ################################################################################
 # CruiseControl, a Continuous Integration Toolkit
