@@ -4,6 +4,10 @@ Changes listed by release, then alphabetically.
 
 CruiseControl Release Notes - 2.7.3-dev
 
+general
+======================
+* Change cruisecontrol.sh (main, binaryrelease, distcc) script to use more generic shebang (works with FreeBSD). Patch by Ivan "Rambius" Ivanov
+
 build loop
 ======================
 
